:art: Initial default Layout component completion

--- a/src/components/demo.less
+++ b/src/components/demo.less
@@ -35,12 +35,6 @@
   background-color: #0000000e;
 }
 
-@media (prefers-color-scheme: dark) {
-  .markdown pre {
-    background-color: #ffffff0e;
-  }
-}
-
 .markdown pre code {
   margin: 0;
   padding: 0;
@@ -52,6 +46,7 @@
 
 .pamphlet-demo {
   border: 1px solid #e4e9ec;
+  margin-bottom: 16px;
 }
 
 .pamphlet-demo-content {
